--- a/package.json
+++ b/package.json
@@ -17,9 +17,6 @@
     "start": "pm2 start src/index.js --watch",
     "restart": "pm2 restart src/index.js --watch",
     "reload": "pm2 reload src/index.js --watch",
-    "pm2:list": "pm2 list",
-    "pm2:logs": "pm2 logs",
-    "pm2:monit": "pm2 monit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -36,11 +33,10 @@
     "express": "^4.17.1",
     "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.3",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.3"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "pm2": "^4.5.6"
+    "nodemon": "^2.0.7"
   }
 }
