fix: update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Environment
 NODE_ENV=development
-DEV_TRACKER=FlZrYpiY8IgV0OL5rUba@cluster0.i86av.mongodb.net/<dbname>?retryWrites=true&w=majority
+# Database setup
+DEV_TRACKER=
 SERVER_PORT=3000
